--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     list-style:none;
     border:0;
     font-family: Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 Header {
@@ -63,4 +64,71 @@ nav {
     box-shadow: 0px 1px 6px #00000029;
     border-radius: 4px;
     margin: 18px;
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.abstract {
+    margin: 15px;
+    width: 35%;
+    color: #888888
+}
+
+.abstract-title {
+    color: #888888;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.abstract-text {
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.form-section {
+    margin: 15px;
+    width: 23%;
+    color: #888888;
+    display: flex;
+}
+
+form {
+    width: 100%;
+}
+
+.form-section {
+    font-size: 12px;
+}
+
+.form-section #name, #email, #cpf {
+    width: 100%;
+    height: 30px;
+    padding: 8px;
+    border: 1px solid #707070;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    color: #888888;
+}
+
+input:focus {
+    outline: none;
+}
+
+#masc-label {
+    margin-right: 15%;
+}
+
+.btnEnviar {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+    color: #888888;
+    background: #fff;
+    margin-top: 18px;
+    border: 1px solid #707070;
+    border-radius: 4px;
 }
