--- a/css/style.css
+++ b/css/style.css
@@ -31,32 +31,41 @@ Header:after {
 }
 
 .headerContent {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 70px;
 }
 
-Header h2 {
+.headerText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerText h2 {
     font-size: 20px;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
     font-weight: normal;
     color: #fff;
 }
 
-Header h1 {
+.headerText h1 {
     font-size: 40px;
-    margin-bottom: 25px;
+    margin-bottom: 22px;
     color: #fff;
 }
 
-Header p {
+.headerText p {
     font-size: 14px;
     color: #fff;
+    text-align: center;
 }
 
 nav {
     margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .btnNav {
@@ -245,7 +254,7 @@ hr {
 }
 
 footer {
-    margin-top: 120px;
+    margin-top: 150px;
     position: relative;
     width: 100%;
     height: 200px;
