feat: add breakpoint (max 360px) to responsive.css

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,6 +132,16 @@
     }
 }
 
+@media (max-width: 360px) {
+    header {
+        height: 600px;
+    }
+
+    nav {
+        grid-template-columns: 1fr;
+    }
+}
+
 @media (min-width: 850px) {
     .text-invisible {
         display: block;
