--- a/css/style.css
+++ b/css/style.css
@@ -65,17 +65,27 @@ Header:after {
 }
 
 nav {
-    margin-top: 30px;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 40px;
 }
 
 .btnNav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 160px;
     height: 40px;
     background: #fff;
     border: 1px solid #707070;
     box-shadow: 0px 1px 6px #00000029;
     border-radius: 4px;
-    margin: 18px;
+}
+
+.btnNav a {
+    font-size: 14px;
+    text-decoration: none;
 }
 
 .btnNav:hover {
