--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ input:focus {
     margin-right: 15%;
 }
 
-.btnEnviar {
+.btnSend {
     width: 100%;
     height: 40px;
     font-size: 16px;
@@ -171,7 +171,7 @@ input:focus {
     border-radius: 4px;
 }
 
-.btnEnviar:hover {
+.btnSend:hover {
     background: #eee;
 }
 
@@ -306,7 +306,7 @@ hr {
     margin-bottom: 30px;
 }
 
-.share-form .btnEnviar{
+.share-form .btnSend{
     width: 260px;
 }
 
