--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,73 @@ footer span {
     font-size: 12px;
     margin: 3px;
 }
+
+.headerEmail {
+    display: flex;
+    justify-content: center;
+    height: 200px;
+}
+
+.headerTextEmail {
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-top: 30px;
+    text-align: center;
+}
+
+.headerTextEmail h2 {
+    font-size: 20px;
+    font-weight: normal;
+    margin-bottom: 5px;
+    color: #fff;
+}
+
+.headerTextEmail h1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.headerTextEmail p {
+    font-size: 14px;
+    color: #fff;
+}
+
+.greetings {
+    margin: auto;
+    width: 90%;
+    margin-bottom: 50px;
+}
+
+.greetings h1 {
+    font-size: 20px;
+    font-weight: normal;
+    margin-bottom: 5px;
+}
+
+.greetings p {
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.footerEmail {
+    height: 100px;
+    padding-bottom: 20px;
+}
+
+.btnProductsEmail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 380px;
+    height: 40px;
+    font-size: 16px;
+    background: #fff;
+    border: 1px solid #707070;
+    border-radius: 4px;
+    margin: 60px;
+}
+
+.btnProductsEmail a {
+    text-decoration: none;
+}
