--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 800px) {
+@media (max-width: 850px) {
     Header:after {
         transform-origin: top right;
         transform: skewY(18deg);
@@ -130,6 +130,18 @@
         display: none;
         margin: 0;
     }
+
+    .alert {
+        padding: 15px 25px;
+    }
+
+    .alert .msg {
+        font-size: 14px;
+    }
+
+    .alert .btnCloseError, .alert .btnCloseSuccess {
+        padding: 15px 12px;
+    }
 }
 
 @media (max-width: 360px) {
@@ -140,10 +152,27 @@
     nav {
         grid-template-columns: 1fr;
     }
+
+    .alert {
+        padding: 12px 20px;
+        max-width: 80%;
+    }
+
+    .alert .msg {
+        font-size: 11px;
+        padding-left: 15px;
+    }
+
+    .alert .btnCloseError, .alert .btnCloseSuccess {
+        padding: 10px 8px;
+    }
 }
 
-@media (min-width: 850px) {
-    .text-invisible {
+@media (min-width: 851px) {
+    .hide {
+        opacity: 1;
+    }
+    .abstract-text.none {
         display: block;
     }
 }
